Modified FlutterSoundRecorder.java to re-use buffers and reduce GC churn

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -43,6 +43,11 @@ android {
 //        sourceCompatibility JavaVersion.VERSION_22
 //        targetCompatibility JavaVersion.VERSION_22
 //    }
+    sourceSets {
+        main {
+            java.srcDirs += 'flutter_sound_core/android/src/main/java'
+        }
+    }
 }
 
 
@@ -60,7 +65,7 @@ dependencies {
     // CAUTION: The following instruction is for developping and debugging the Flauto Engine
     // DO NOT INCLUDE THE FOLLOWING LINE IN A REAL APP !!!
     //implementation project(':flutter_sound_core')
-    implementation 'com.github.canardoux:flutter_sound_core:9.30.0'
+    //implementation 'com.github.canardoux:flutter_sound_core:9.30.0'
     // -------------------------------------------------------------------------------------
 
 }
